# gan-lab-tensorflow

./: .dockerignore  .gitignore  Dockerfile  README.md  push_project.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: quadratic.yaml
docs/: experiment-plan.md  observatory-replay.html
examples/: describe_data.py
src/gan_lab_tensorflow/: __init__.py  augment.py  cli.py  conditional.py  config.py  data.py  evaluation.py  losses.py  metrics.py  models.py  replay.py  schedules.py  trainer.py  visualize.py
src/gan_lab_tensorflow/live/: __init__.py  derby.py  engine.py  registry.py  server.py  session.py
src/gan_lab_tensorflow/live/static/: app.js  derby.html  derby.js  index.html  styles.css
tests/: test_augment.py  test_conditional.py  test_config.py  test_data.py  test_derby.py  test_evaluation.py  test_live.py  test_metrics.py  test_registry.py  test_replay.py  test_schedules.py
